2008-12-15 David Barnett <daviebdawg@gmail.com>
  * Cleaned up processor definitions and updated from MPASM data (special
  thanks Marko Kohtala)

2008-12-03 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed warnings checking RAM against max ROM address (bug #2255225)

2008-12-02 David Barnett <daviebdawg@gmail.com>
  * Corrected COFF type for p12f510 (bug #2255399)

2008-12-02 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed infinite loop for odd addresses on 18F parts (bug #1988473)
  * [gpasm] Display code_pack sections byte-by-byte in listing file
  * Special thanks to Michael Ballbach

2008-12-02 David Barnett <daviebdawg@gmail.com>
  * Fixed filename expansion bug in regression test script

2008-12-02 David Barnett <daviebdawg@gmail.com>
  * Made regression tests Bourne shell compatible

2008-11-06 David Barnett <daviebdawg@gmail.com>
  * Added missing definitions for p18f23k20 and p18f43k20 (thanks Raphael
  Neider)

2008-08-19 David Barnett <daviebdawg@gmail.com>
  * Added header & LKR files for p18f23k20, p18f24k20, p18f25k20, p18f26k20,
  p18f43k20, p18f44k20, p18f45k20, p18f46k20

2008-07-08 David Barnett <daviebdawg@gmail.com>
  * Added support for p18f23k20, p18f24k20, p18f25k20, p18f26k20, p18f43k20,
  p18f44k20, p18f45k20, p18f46k20 (thanks Renato Caldas)

2008-06-06 David Barnett <daviebdawg@gmail.com>
  * Fixed segfault in gplink -O2 for symbols w/o sections (bug #1985543)

2008-06-06 David Barnett <daviebdawg@gmail.com>
  * Fixed CONFIG address range for 18f65j50 (bug #1986505)

2008-06-03 David Barnett <daviebdawg@gmail.com>
  * Fixed line number problems with CODE_PACK directive (bug #1972099)

2008-05-17 David Barnett <daviebdawg@gmail.com>
  * gputils-0.13.6 released

2008-05-17 David Barnett <daviebdawg@gmail.com>
  * Fixed bug in r528 (involving bug #1534641)

2008-05-16 David Barnett <daviebdawg@gmail.com>
  * Added support for p18f45k20
  * Added this and previous few processors to processor list in documentation
